fixed scrollbar

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -26,7 +26,7 @@ p {
 }
 
 .container {
-    width: 100vw;
+    width: 100%;
     margin: 0 auto;
 }
 .inner-container {
